docs: fix mobile header spacing

--- a/docs/assets/styles.css
+++ b/docs/assets/styles.css
@@ -539,6 +539,7 @@ nav {
 
 .nav-heading {
   margin: 0;
+  padding: 0;
   border: 0;
 }
 
